// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokensForm component should render a form to configure a token vote with 3 token categories 1`] = `
<div
  className="token-vote-form"
>
  <form>
    <div
      className="flex"
    >
      <FormControlWithLabel
        label="Missing translation: administration.tokenVoteInstructions"
        labelAlwaysVisible={false}
        onChange={[Function]}
        required={true}
        type="text"
        validationErrors={null}
        value="Je vous prie de bien vouloir voter."
      />
      <Helper
        additionalTextClasses="helper-text-only"
        classname=""
        helperText="Missing translation: administration.helpers.tokenVoteInstructions"
        helperUrl="/static2/img/helpers/helper5.png"
        label=""
      />
    </div>
    <div
      className="flex"
    >
      <label
        htmlFor="input-dropdown-addon"
      >
        Missing translation: administration.tokenCategoryNumber
      </label>
      <Helper
        additionalTextClasses=""
        classname=""
        helperText="Missing translation: administration.helpers.tokenCategoryNumber"
        helperUrl="/static2/img/helpers/helper2.png"
        label=""
      />
    </div>
    <SplitButton
      id="input-dropdown-addon"
      onSelect={[Function]}
      required={true}
      title={3}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={1}
        header={false}
      >
        1
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={2}
        header={false}
      >
        2
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={3}
        header={false}
      >
        3
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={4}
        header={false}
      >
        4
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={5}
        header={false}
      >
        5
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={6}
        header={false}
      >
        6
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={7}
        header={false}
      >
        7
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={8}
        header={false}
      >
        8
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={9}
        header={false}
      >
        9
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={10}
        header={false}
      >
        10
      </MenuItem>
    </SplitButton>
    <div
      className="flex margin-m"
    >
      <Checkbox
        bsClass="checkbox"
        checked={false}
        disabled={false}
        inline={false}
        onChange={[Function]}
        title=""
      >
        <Helper
          additionalTextClasses="helper-text-only"
          classname="inline"
          helperText="Missing translation: administration.helpers.exclusive"
          helperUrl=""
          label="Missing translation: administration.exclusive"
        />
      </Checkbox>
    </div>
    <div>
      <div
        className="separator"
      />
      <Connect(DumbTokenCategoryForm)
        editLocale="fr"
        id="1234"
        index={0}
        moduleId="my-tokens-form"
        tokenCategoryNumber={3}
      />
      <Connect(DumbTokenCategoryForm)
        editLocale="fr"
        id="5678"
        index={1}
        moduleId="my-tokens-form"
        tokenCategoryNumber={3}
      />
      <Connect(DumbTokenCategoryForm)
        editLocale="fr"
        id="9874"
        index={2}
        moduleId="my-tokens-form"
        tokenCategoryNumber={3}
      />
    </div>
  </form>
</div>
`;

exports[`tokensForm component should render a form to configure a token vote with one token category 1`] = `
<div
  className="token-vote-form"
>
  <form>
    <div
      className="flex"
    >
      <FormControlWithLabel
        label="Missing translation: administration.tokenVoteInstructions"
        labelAlwaysVisible={false}
        onChange={[Function]}
        required={true}
        type="text"
        validationErrors={null}
        value="Je vous prie de bien vouloir voter."
      />
      <Helper
        additionalTextClasses="helper-text-only"
        classname=""
        helperText="Missing translation: administration.helpers.tokenVoteInstructions"
        helperUrl="/static2/img/helpers/helper5.png"
        label=""
      />
    </div>
    <div
      className="flex"
    >
      <label
        htmlFor="input-dropdown-addon"
      >
        Missing translation: administration.tokenCategoryNumber
      </label>
      <Helper
        additionalTextClasses=""
        classname=""
        helperText="Missing translation: administration.helpers.tokenCategoryNumber"
        helperUrl="/static2/img/helpers/helper2.png"
        label=""
      />
    </div>
    <SplitButton
      id="input-dropdown-addon"
      onSelect={[Function]}
      required={true}
      title={1}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={1}
        header={false}
      >
        1
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={2}
        header={false}
      >
        2
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={3}
        header={false}
      >
        3
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={4}
        header={false}
      >
        4
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={5}
        header={false}
      >
        5
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={6}
        header={false}
      >
        6
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={7}
        header={false}
      >
        7
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={8}
        header={false}
      >
        8
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={9}
        header={false}
      >
        9
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={10}
        header={false}
      >
        10
      </MenuItem>
    </SplitButton>
    <div>
      <div
        className="separator"
      />
      <Connect(DumbTokenCategoryForm)
        editLocale="fr"
        id="1234"
        index={0}
        moduleId="my-tokens-form"
        tokenCategoryNumber={1}
      />
    </div>
  </form>
</div>
`;
